<resources>
    <string name="app_name">SmileCollege</string>
    <string name="nav_username">Lynn</string>
    <string name="nav_userinfor">这里是个性签名</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dynamic">动态</string>
    <string name="title_notifications">消息</string>
    <string name="copyright_text">Copyright©2019 Lynn</string>
    <string name="num_follower">233</string>
    <string name="num_fans">66</string>
    <string name="num_dynamic">0</string>
    <string name="title_follower">关注</string>
    <string name="title_fans">粉丝</string>
    <string name="title_conversation">我的话题</string>
    <string name="title_my_conversation">我的话题</string>
    <string name="title_my_collection">我的收藏</string>
    <string name="title_history">历史记录</string>
    <string name="title_setting">设置</string>
    <string name="title_search_tips">请输入要搜索的帖子</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_cancel">取消</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_theme">主题</string>
    <string name="forum_title">你喜欢的，都在这里！</string>
    <string name="white">#365663</string>
    <string name="toolbar_title">主页</string>
    <string name="title_register">用户注册</string>
    <string name="title_login">登录</string>
    <string name="title_password">请输入密码</string>
    <string name="title_login_tips">请输入用户名</string>
    <string name="title_password_tips">请输入密码</string>
    <string name="title_back">返回</string>
    <string name="title_search">请输入要搜索的校园</string>
    <string name="title_register_short">注册</string>
    <string name="title_username_tips_register">用户名</string>
    <string name="title_password_tips_register">6-16位密码</string>
    <string name="title_phone_tips_register">手机号码</string>
    <string name="title_email_tips_register">电子邮箱</string>

</resources>
