<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--搜索-->
    <item android:id="@+id/toolbar_search"
        android:title="@string/title_search"
        android:visible="true"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <!--设置-->
    <item android:id="@+id/toolbar_setting"
        android:title="@string/title_setting"
        android:visible="false"
        android:icon="@drawable/ic_setting"
        app:showAsAction="ifRoom"/>
    <!--返回-->
    <item android:id="@+id/toolbar_back"
        android:title="@string/title_back"
        android:visible="false"
        android:icon="@drawable/ic_back"
        app:showAsAction="ifRoom"/>
</menu>