<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/portrait_size"
        android:layout_height="@dimen/portrait_size"
        android:paddingStart="@dimen/infor_left"
        android:paddingEnd="0dp"
        android:paddingBottom="6dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@mipmap/portrait"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/infor_left"
        android:paddingEnd="@dimen/infor_left"
        android:text="@string/nav_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/infor_left"
        android:paddingEnd="@dimen/infor_left"
        android:paddingBottom="@dimen/infor_left"
        android:text="@string/nav_userinfor" />

    <LinearLayout
        android:id="@+id/show_me"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:stretchColumns="1"
        android:orientation="horizontal"
        android:checkableBehavior="single"
        >

        <LinearLayout
            android:id="@+id/dynamic"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/dynamic_count"
                android:singleLine="false"
                android:text="@string/num_dynamic"
                android:textColor="#000000"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
            <TextView
                android:id="@+id/dynamic_text"
                android:singleLine="false"
                android:text="@string/title_dynamic"
                android:textSize="12sp"
                android:textColor="#757575"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/follower_count"
                android:singleLine="false"
                android:text="@string/num_follower"
                android:textColor="#000000"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
            <TextView
                android:id="@+id/follower_text"
                android:singleLine="false"
                android:text="@string/title_follower"
                android:textSize="12sp"
                android:textColor="#757575"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fans"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/fans_count"
                android:singleLine="false"
                android:text="@string/num_fans"
                android:textColor="#000000"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
            <TextView
                android:id="@+id/fans_text"
                android:singleLine="false"
                android:text="@string/title_fans"
                android:textSize="12sp"
                android:textColor="#757575"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_width="@dimen/bar_width"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>