<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:id="@+id/login_fragment">

    <include layout="@layout/toolbar_base" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        android:id="@+id/login_back_layout">
        <Button
            android:id="@+id/button_back"
            android:layout_width="@dimen/button_back_size"
            android:layout_height="@dimen/button_back_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/tips_icon_margin"
            android:background="@drawable/ic_back" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_layout"
        android:layout_marginLeft="@dimen/tips_icon_margin"
        android:layout_marginRight="@dimen/tips_icon_margin"
        android:layout_marginTop="@dimen/tips_icon_margin"
        android:gravity="center">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_layout"
            android:layout_marginTop="55dp"
            android:gravity="center">
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="55dp"
                android:paddingEnd="60dp"
                android:textColorHint="@color/tips"
                android:hint="@string/title_login_tips"
                android:textColor="@color/toolbar_text"
                android:background="@drawable/login_edit_text"/>
            <ImageView
                android:id="@+id/username_tips"
                android:contentDescription="@string/title_password_tips"
                android:layout_width="@dimen/tips_icon_size"
                android:layout_height="@dimen/tips_icon_size"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/tips_icon_margin"
                android:src="@drawable/ic_user"
                android:visibility="visible"/>
            <Button
                android:id="@+id/username_clear"
                android:layout_width="@dimen/tips_icon_size"
                android:layout_height="@dimen/tips_icon_size"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/tips_icon_margin"
                android:background="@drawable/ic_clear" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="@dimen/button_register_marginTop"
            android:gravity="center" >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="55dp"
                android:paddingEnd="60dp"
                android:textColorHint="@color/tips"
                android:hint="@string/title_password_tips"
                android:textColor="@color/toolbar_text"
                android:background="@drawable/login_edit_text" />
            <ImageView
                android:id="@+id/password_tips"
                android:contentDescription="@string/title_password_tips"
                android:layout_width="@dimen/tips_icon_size"
                android:layout_height="@dimen/tips_icon_size"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_password"
                android:layout_marginStart="@dimen/tips_icon_margin"
                android:visibility="visible"/>
            <Button
                android:id="@+id/password_forget"
                android:layout_width="@dimen/tips_icon_size"
                android:layout_height="@dimen/tips_icon_size"
                android:background="@drawable/ic_forget"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/tips_icon_margin" />
        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_login_height"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/title_login" />
    </RelativeLayout>

</RelativeLayout>
